<resources>
    <string name="app_name">BiblioApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Tecnologico de Culiacán</string>
    <string name="nav_header_subtitle">biblioteca@itculiacan.edu.mx</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicializar sistema</string>
    <string name="menu_gallery">Prestar libro</string>
    <string name="menu_slideshow">Devolver libro</string>
    <string name="menu_tools">Cambiar de tipo de usuario</string>
    <string name="menu_share">Mostrar titulo a resurtir</string>
    <string name="menu_send">Configurar sistema</string>
    <string name="libros_prestados">Libros prestados</string>
    <string name="lista_vacia">No existen datos</string>
    <string name="pantalla_prestamos">Prestamos</string>
    <string name="pantalla_cambio">Cambio tipo Usuario</string>
    <string name="pantalla_devovler">Devolver libros</string>
    <string name="pantalla_prestamo">Prestar libros</string>
    <string name="pantalla_resurtir">Resurtir</string>

</resources>
