<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_ini_sistema"
            android:icon="@drawable/baseline_cloud_download_black_18"
            android:title="@string/menu_home"/>
        <item
            android:id="@+id/nav_prestar_libro"
            android:icon="@drawable/baseline_book_black_18"
            android:title="@string/menu_gallery"/>
        <item
            android:id="@+id/nav_devolver_libro"
            android:icon="@drawable/baseline_assignment_returned_black_48"
            android:title="@string/menu_slideshow"/>
        <item
            android:id="@+id/nav_cambiar_tipo_usuario"
            android:icon="@drawable/baseline_people_black_18"
            android:title="@string/menu_tools"/>

        <item
            android:id="@+id/nav_libro_resurtir"
            android:icon="@drawable/baseline_assignment_black_24"
            android:title="@string/menu_share"/>
        <item
            android:id="@+id/nav_configuracion"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_send"/>
    </group>
</menu>
